--- a/public/css/style.css
+++ b/public/css/style.css
@@ -261,7 +261,7 @@ body .modal-backdrop {
   position: relative;
   z-index: 9;
   overflow: hidden;
-  padding: 170px 0 225px;
+  padding: 60px 0 225px;
   background: url("../images/bg/banner-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -2337,7 +2337,7 @@ body .modal-backdrop {
   position: relative;
   z-index: 9;
   overflow: hidden;
-  padding: 170px 0 225px;
+  padding: 60px 0 225px;
   background: url("../images/bg/V3_Banner_BG.png");
   background-size: cover;
   background-repeat: no-repeat;
